Refactor Article management; streamline GUI components and enhance readability